rust/surrealdb-macros/src/snapshots/surrealdb_macros__query_ifelse__tests__if_statement2-2.snap
---
source: surrealdb-macros/src/query_ifelse.rs
expression: if_statement2
---
IF age >= $_param_00000000 <= $_param_00000000 THEN
	_param_00000000
ELSE
	_param_00000000
END
