rust/surrealdb-macros/src/snapshots/surrealdb_macros__query_ifelse__tests__if_statement4.snap
---
source: surrealdb-macros/src/query_ifelse.rs
expression: if_statement4.get_bindings()
---
[
    Binding {
        param: "_param_00000000",
        value: Number(
            Int(
                18,
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "18",
    },
    Binding {
        param: "_param_00000000",
        value: Number(
            Int(
                120,
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "120",
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Valid",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "Valid",
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Oyelowo Oyedayo",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'Oyelowo Oyedayo'",
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "The Apple!",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "The Apple!",
    },
]
